# coin-weight

./: .travis.yml  CMakeLists.txt  cmake_clean.sh  main.cpp
