cmake_minimum_required (VERSION 2.6)
SET(CMAKE_CXX_STANDARD 14)
SET(COMPILE_FLAGS "-std=c++14 -std=gnu++14 -Wall -flto")
SET(LINK_FLAGS "-lgtest -lpthread -flto")
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${COMPILE_FLAGS}" )
SET(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINK_EXECUTABLE} ${LINK_FLAGS}" )
project (coin-weight)
find_package(Gtest)
include_directories(${GTEST_INCLUDE_DIRS})
add_executable(coin-weight main.cpp) 
target_link_libraries(coin-weight gtest pthread)

#add_test(coin-weight coin-weight )
#enable_testing()
#cmake_minimum_required (VERSION 2.6)
##enable_testing()
##include_directories(${GTEST_INCLUDE_DIR})
#SET(CMAKE_CXX_STANDARD 14)
#SET(COMPILE_FLAGS "-std=c++14 -std=gnu++14 -Wall -flto")
#SET(LINK_FLAGS "-lgtest -lpthread -flto")
#SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${COMPILE_FLAGS}" )
##SET(CMAKE_CXX_LINK_EXECUTABLE "${CMAKE_CXX_LINK_EXECUTABLE} ${LINK_FLAGS}" )
#SET(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINK_EXECUTABLE} ${LINK_FLAGS}" )
#project (coin-weight)
#find_package(Gtest)
#include_directories(${GTEST_INCLUDE_DIRS})
##target_link_libraries(
##	  ${project}
##	  ${GTEST_LIBRARY_DEBUG}
##	  ${GTEST_MAIN_LIBRARY_DEBUG})
##GTEST_ADD_TESTS(coin-weight main.cpp)
#add_executable(coin-weight main.cpp) 
##add_dependencies(coin-weight gtest) 
#target_link_libraries(coin-weight gtest pthread)
#
##add_test(coin-weight coin-weight )
##enable_testing()
##
